--- a/oop/index.html
+++ b/oop/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>More Javascript</title>
   </head>
   <body>
-    <script src="./script.js"></script>
-    <!-- <script src="./products.js"></script> -->
+    <img src="./saitamaok.jpeg" style="background-size:cover" />
+    <script src="./scripts.js"></script>
   </body>
 </html>
