--- a/nodejs/index.html
+++ b/nodejs/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <img src="./saitamaok.jpeg" style="background-size:cover" />
+    <form id="form">
+      <button type="submit" class="btn btn-primary" id="submit-btn">
+        Generate Token
+      </button>
+    </form>
     <script src="./scripts.js"></script>
   </body>
 </html>
