--- a/expressjs/index.html
+++ b/expressjs/index.html
@@ -22,6 +22,6 @@
         </button>
       </form>
     </div>
-    <script src="scripts/index.js"></script>
+    <script src="./public/scripts/index.js"></script>
   </body>
 </html>
